--- a/menu/index.html
+++ b/menu/index.html
@@ -13,7 +13,8 @@
     </script>
 </head>
 <body onload="Checkversion()">
-    <dialog id="refresh-webpage">New Update, the page will refresh in 3 seconds</dialog>
+    <div class="bg"></div>
+    <dialog id="refresh-webpage">New Update! the page will refresh in 3 seconds</dialog>
     <p1>test</p1>
 </body>
 <style>
@@ -36,5 +37,4 @@ body, html {
 }
 </style>
 </head>
-
 </html>
