--- a/menu/index.html
+++ b/menu/index.html
@@ -25,7 +25,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("img_girl.jpg");
+  background-image: url("https://d1csarkz8obe9u.cloudfront.net/posterpreviews/restaurant-menu-digital-display-design-template-5d2609decd85935bedd2a3a6d9a9982e_screen.jpg?ts=1637046477");
 
   /* Full height */
   height: 100%; 
